# Zentropy

./: README.md
Phase-1 (PQC chat)/: README.md
Phase-1 (PQC chat)/Quantum_Algos_MAC/: README.md  phase1.py  setup.sh
Phase-1 (PQC chat)/Quantum_Algos_Windows/: README.md  build_liboqs.ps1  requirements.txt  server.py
Phase-2 (Zentropy)/: .env.example  Makefile  README.md  account-sepolia.json  docker-compose.prod.yml  render.yaml
Phase-2 (Zentropy)/docker/: entrypoint.sh
Phase-2 (Zentropy)/scripts/: _diag_deploy_failures.py  _diag_rpc.py  smoke_transfer_v2.sh
Phase-2 (Zentropy)/starknet_contracts/src/: account_factory.cairo  lib.cairo  merkle_audit.cairo
Phase-2 (Zentropy)/zk_prover/: Cargo.toml
Phase-2 (Zentropy)/zk_prover/src/: main.rs  server.rs
Quantum-Guard/: .dockerignore  .env.example  .env.production.example  .gitignore  DEPLOY_RENDER.md  Dockerfile  Makefile  README.md  docker-compose.yml  requirements.txt
Quantum-Guard/pqc_backend/: __init__.py  balance_provider.py  batch_committer.py  config.py  contract_manager.py  drand_integration.py  key_manager.py  merkle_audit.py  persistence.py  signer.py  transfer_handler.py  utils.py
Quantum-Guard/pqc_backend/tests/: __init__.py  test_integration.py  test_persistence.py  (+2 more)
Quantum-Guard/quantum_wallet_ui/: __init__.py  cli.py  server.py
Quantum-Guard/starknet_contracts/: Scarb.toml  deploy.sh
Quantum-Guard/zk_prover/: Cargo.toml
Quantum_Algos_MAC/: .gitignore  build_liboqs.sh  phase1.py  requirements.txt  server.py
Quantum_Algos_Windows/: .gitignore  README.md  phase1.py  phase2.py  server.py
(+81 files in other folders)
